--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -6,5 +6,19 @@
   "appDesc": {
     "message": "Simple and flexible tool to save tabs and manage them.",
     "description":"Descripción de l'extensión a nivel de manifiest."
+  },
+  "menu_config": {
+    "message":"Configuration",
+    "description": "Paraula del menu lateral"
+  },
+
+  "menu_atajos": {
+    "message": "Shortcuts",
+    "description": "Paraula del menu lateral"
+  },
+
+  "menu_donaciones": {
+    "message": "Paypal",
+    "description": "Paraula del menu lateral"
   }
 }
