--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1,10 +1,10 @@
 {
   "appName": {
-    "message": "Simple Tab Manager",
+    "message": "Simple Tab Saver",
     "description": "Nom de l'extencio."
   },
   "appDesc": {
-    "message": "Simple and flexible tool to save tabs and manage them.",
+    "message": "Save and recover the tabs whenever you want.",
     "description":"Descripción de l'extensión a nivel de manifiest."
   },
   "menu_config": {
@@ -74,6 +74,9 @@
   },
   "config_subonlysave": {
     "message": "Close tabs when saving."
+  },
+  "config_snackbar_message": {
+    "message": "updated configuration"
   }
 
 }
