V. 1.8.5 -Francés i Alemany póximament
Store:
-Canvis en les descripcións

--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -4,7 +4,7 @@
     "description": "Nom de l'extencio."
   },
   "appDesc": {
-    "message": "Guarda y recupera les teves pestanyes sempre que vulguis.",
+    "message": "Simple i fàcil d'utilitzar. Guarda y recupera les teves pestanyes sempre que vulguis, en un sol click, i sense finestres emergents.",
     "description":"Descripción de l'extensión a nivel de manifiest."
   },
 
