--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -4,7 +4,7 @@
     "description": "Nom de l'extencio."
   },
   "appDesc": {
-    "message": "Save and recover the tabs whenever you want.",
+    "message": "Simple and easy to use. Save and recover the tabs whenever you want, in just one click, and without pop-ups.",
     "description":"Descripción de l'extensión a nivel de manifiest."
   },
   "menu_config": {
