--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -4,7 +4,7 @@
     "description":""
   },
   "appDesc": {
-    "message": "Guarda y recupera les teves pestanyes sempre que vulguis.",
+    "message": "Simple y facil de utilizar. Guarda y recupera tus pestañas sempre que quieras, en un solo click, y sin ventanas emergentes.",
     "description":"Descripción de l'extensión a nivel de manifiest."
   },
   "menu_config": {
