--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1,80 +1,83 @@
 {
   "appName": {
     "message": "Simple Tab Saver",
-    "description":""
+    "description": "Nom de l'extencio."
   },
   "appDesc": {
-    "message": "Simple y facil de utilizar. Guarda y recupera tus pestañas siempre que quieras, en un solo click, y sin ventanas emergentes.",
+    "message": "Simple and easy to use. Save and recover the tabs whenever you want, in just one click, and without pop-ups.",
     "description":"Descripción de l'extensión a nivel de manifiest."
   },
   "menu_config": {
-    "message":"Configuración",
+    "message":"Configuration",
     "description": "Paraula del menu lateral"
   },
+
   "menu_atajos": {
-    "message": "Atajos",
+    "message": "Shortcuts",
     "description": "Paraula del menu lateral"
   },
+
   "menu_donaciones": {
     "message": "Paypal",
     "description": "Paraula del menu lateral"
   },
+
   "atajos_titol": {
-    "message": "Atajos de teclado:",
+    "message": "Keyboard shortcuts:",
     "description": "Titol de la entrada atajos"
   },
   "atajos_subtitol": {
-    "message": "Utilice los atajos de teclado para ser más rápido trabajando.",
+    "message": "Use the keyboard shortcuts to be faster working.",
     "description": "Subtitol de la entrada atajos"
   },
   "atajos_entrada1": {
-    "message": "Externos:"
+    "message": "External:"
   },
   "atajos_subentrada1_1": {
-    "message": "Activar guardado:"
+    "message": "Save or recover:"
   },
   "atajos_entrada2": {
-    "message": "Internos:"
+    "message": "Internal:"
   },
   "atajos_subentrada2_1": {
-    "message": "Configuración"
+    "message": "Configuration"
   },
   "atajos_subentrada2_2": {
-    "message": "Atajos"
+    "message": "Shortcuts"
   },
   "atajos_subentrada2_3": {
     "message": "Paypal"
   },
 
-
   "config_titol": {
-    "message": "Modo de trabajo:",
+    "message": "WorkFlow:",
     "description": "Titol de la entrada configuracio"
   },
   "config_subtitol": {
-    "message": "Elija la forma de trabajar que le resulte más comoda.",
+    "message": "Choose your perferfect workflow for you.",
     "description": "Subtitol de la entrada config"
   },
   "config_simple": {
-    "message": "Simple "
+    "message": "Simple"
   },
   "config_simplemsg": {
-    "message": "Guardar y recupera las pestañas al hacer click. "
+    "message": "Save and recover the tabs when clicking."
   },
   "config_subsimple": {
-    "message": "Guardar las pestañas en la barra de marcadores"
+    "message": "Save the tabs on the bookmarks bar."
   },
   "config_onlysave": {
-    "message": "Solo guardar "
+    "message": "Only Save"
   },
   "config_onlysavemsg": {
-    "message": "Las pestañas se guardan en los marcadores al hacer click."
+    "message": "The tabs are saved in the markers when you click."
   },
   "config_subonlysave": {
-    "message": "Cerrar pestañas al guardar."
+    "message": "Close tabs when saving."
   },
   "config_snackbar_message": {
-    "message": "configuración actualizada"
+    "message": "updated configuration"
   }
 
 }
+
