V. 1.8.6 -Francés i Alemany acabats -Correcions de Català, Espanyol i Angles

--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -76,7 +76,7 @@
     "message": "Tancar pestanyes al guardar."
   },
   "config_snackbar_message": {
-    "message": "configuració actualitzada"
+    "message": "Configuració actualitzada."
   }
 
 }
