--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -4,78 +4,78 @@
     "description": "Nom de l'extencio."
   },
   "appDesc": {
-    "message": "Simple et facile à utiliser. Sauvegardez et récupérez vos onglets quand vous voulez, en un seul clic, et sans pop-ups.",
+    "message": "Semplice e facile da usare. Salvare e recuperare le schede in qualsiasi momento, con un solo clic e senza pop-up.",
     "description": "Descripción de l'extensión a nivel de manifiest."
   },
   "menu_config": {
-    "message": "Configuration",
+    "message": "Configurazione",
     "description": "Paraula del menu lateral"
   },
   "menu_atajos": {
-    "message": "Raccourcis",
+    "message": "Tasti di scelta rapida",
     "description": "Paraula del menu lateral"
   },
   "menu_donaciones": {
-    "message": "Paypal",
+    "message": "PayPal",
     "description": "Paraula del menu lateral"
   },
   "atajos_titol": {
-    "message": "Raccourcis clavier",
+    "message": "Scorciatoie da tastiera",
     "description": "Titol de la entrada atajos"
   },
   "atajos_subtitol": {
-    "message": "Utilisez les raccourcis clavier pour travailler plus rapidement.",
+    "message": "Utilizzare le scorciatoie da tastiera per lavorare più velocemente.",
     "description": "Subtitol de la entrada atajos"
   },
   "atajos_entrada1": {
-    "message": "Externe:"
+    "message": "Esterno"
   },
   "atajos_subentrada1_1": {
-    "message": "Activer enregistré"
+    "message": "Attiva salvato"
   },
   "atajos_entrada2": {
-    "message": "Interne"
+    "message": "Interno"
   },
   "atajos_subentrada2_1": {
-    "message": "Configuration"
+    "message": "Configurazione"
   },
   "atajos_subentrada2_2": {
-    "message": "Raccourcis"
+    "message": "Tasti di scelta rapida"
   },
   "atajos_subentrada2_3": {
-    "message": "Paypal"
+    "message": "PayPal"
   },
   "config_titol": {
-    "message": "Mode de travail",
+    "message": "Modalità di lavoro",
     "description": "Titol de la entrada configuracio"
   },
   "config_subtitol": {
-    "message": "Choisissez la façon de travailler qui vous convient le mieux.",
+    "message": "Scegli il modo di lavorare più comodo per te.",
     "description": "Subtitol de la entrada config"
   },
   "config_simple": {
-    "message": "Simple"
+    "message": "Semplice"
   },
   "config_simplemsg": {
-    "message": "Enregistrez et récupérez les onglets lorsque vous cliquez."
+    "message": "Salvare e recuperare le schede quando si fa clic."
   },
   "config_subsimple": {
-    "message": "Enregistrer les onglets dans la barre de favoris."
+    "message": "Salva le schede nella barra dei segnalibri."
   },
   "config_onlysave": {
-    "message": "Il suffit d'économiser"
+    "message": "Basta salvare"
   },
   "config_onlysavemsg": {
-    "message": "Les onglets sont enregistrés dans les marqueurs lorsque vous cliquez."
+    "message": "Le schede vengono salvate nei segnalibri quando si fa clic."
   },
   "config_subonlysave": {
-    "message": "Fermez les onglets lors de l'enregistrement."
+    "message": "Chiudi le schede durante il salvataggio."
   },
   "config_snackbar_message": {
-    "message": "Configuration mise à jour."
+    "message": "Configurazione aggiornata."
   },
   "config_error": {
-    "message": "Problème avec la configuration sauvegardée.\n",
+    "message": "Problema con la configurazione salvata.\n",
     "description": "Mensaje de error cuando hay problemas con la configuración"
   }
 }
