v.1.9.6: 🆙 Menos dependencia de Simplex. 🆙 Eliminació de part de Material Desing Lite. 🆙 Actualització a Bootstrap 4.4.1
🆙 Correccio de fallos de diseny.
🆙 Eliminació de Tether.js

🆕 Scoll horitzontal implementat en history.html
🆙 Generació preliminar dels historials i les pestanyes.
🆙 Les urls es formategen correctament en les targetes de history.html

🆙 Reducció de pes del objecte a guardar.
🆙 Millorar onError() i fer-la per a altres tipus de error.
🆕 Afegir acces desde el boto dret (ContextMenu)

🆙 Arreglat path de la icona del browser button

🆕 Preparació inicial de manifest v3
🆙 Canvis i correcció de bugs:
- Canvi de l'entrada Paypal per "mes"
- Implementades traduccions: More, Notificació de guardad, error, i Quota_bytes....
- Actualizació de copyright
- Acces directe desde shortcuts per editar el comando.
- Eliminació de la funcio datapreparation() conflictiva.
- Incorporació de l'icona (!) en taronja indicant error.
- Solucionat el problema en setings.html quan no es marcava la opció guardada de la base de dades.

--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -16,7 +16,7 @@
     "description": "Paraula del menu lateral"
   },
   "menu_donaciones": {
-    "message": "Paypal",
+    "message": "Plus",
     "description": "Paraula del menu lateral"
   },
   "atajos_titol": {
@@ -43,7 +43,7 @@
     "message": "Raccourcis"
   },
   "atajos_subentrada2_3": {
-    "message": "Paypal"
+    "message": "Plus"
   },
   "config_titol": {
     "message": "Mode de travail",
@@ -74,8 +74,37 @@
   "config_snackbar_message": {
     "message": "Configuration mise à jour."
   },
-  "config_error": {
+  "more_puntuacio": {
+    "message": "Évaluez-moi!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "more_donacio": {
+    "message": "Faire un don.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
+  },
+
+  "error_saved_config_data": {
     "message": "Problème avec la configuration sauvegardée.\n",
     "description": "Mensaje de error cuando hay problemas con la configuración"
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_title": {
+    "message": "Je suis désolé...\uD83D\uDE1E",
+    "description": "Titol del error cuando su supera el limite en la base de datos de Chrome per item. EN LA NOTIFICACIÓ."
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_body": {
+    "message": "La base de données Chrome ne peut pas enregistrer une session avec autant d'onglets. Essayez de fermer certains d'entre eux et réessayez.",
+    "description": "Mensaje de error cuando su supera el limite en la base de datos de Chrome per item.  EN LA NOTIFICACIÓ."
+  },
+  "error_en_execucio_notification": {
+    "message": "Un problème est survenu.",
+    "description": "Mensaje de error generico cuando algo falla mientras se guarda la session o en ejecucion"
+  },
+  "button_logic_onlysave_notificationn_TITLE": {
+    "message": "Sauvegardé!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "button_logic_onlysave_notificationn_MESSAGE": {
+    "message": "Onglets enregistrés dans la barre de signets.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
   }
 }
