--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -16,7 +16,7 @@
     "description": "Paraula del menu lateral"
   },
   "menu_donaciones": {
-    "message": "Paypal",
+    "message": "Més",
     "description": "Paraula del menu lateral"
   },
   "atajos_titol": {
@@ -43,7 +43,7 @@
     "message": "Dreceres"
   },
   "atajos_subentrada2_3": {
-    "message": "Paypal"
+    "message": "Més"
   },
   "config_titol": {
     "message": "Mode de treball",
@@ -74,8 +74,37 @@
   "config_snackbar_message": {
     "message": "Configuració actualitzada."
   },
-  "config_error": {
+
+  "more_puntuacio": {
+    "message": "Puntuam!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "more_donacio": {
+    "message": "Donació.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
+  },
+  "error_saved_config_data": {
     "message": "Problema amb la configuració desada.",
     "description": "Mensaje de error cuando hay problemas con la configuración"
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_title": {
+    "message": "Ho sento...\uD83D\uDE1E",
+    "description": "Titol del error cuando su supera el limite en la base de datos de Chrome per item. EN LA NOTIFICACIÓ."
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_body": {
+    "message": "La base de dades de Chrome no pot guardar una sessió amb tantes pestanyes. Prova de tancar-ne alguna i intenta-ho de nou.",
+    "description": "Mensaje de error cuando su supera el limite en la base de datos de Chrome per item.  EN LA NOTIFICACIÓ."
+  },
+  "error_en_execucio_notification": {
+    "message": "Alguna cosa no ha anat bé.",
+    "description": "Mensaje de error generico cuando algo falla mientras se guarda la session o en ejecucion"
+  },
+  "button_logic_onlysave_notificationn_TITLE": {
+    "message": "Guardat!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "button_logic_onlysave_notificationn_MESSAGE": {
+    "message": "Pestanyes guardades en la barra de marcadors.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
   }
 }
