--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -16,7 +16,7 @@
     "description": "Paraula del menu lateral"
   },
   "menu_donaciones": {
-    "message": "Paypal",
+    "message": "Mehr",
     "description": "Paraula del menu lateral"
   },
   "atajos_titol": {
@@ -43,7 +43,7 @@
     "message": "Tastenkombinationen"
   },
   "atajos_subentrada2_3": {
-    "message": "Paypal"
+    "message": "Mehr"
   },
   "config_titol": {
     "message": "Arbeitsmodus",
@@ -74,8 +74,39 @@
   "config_snackbar_message": {
     "message": "Aktualisierte Konfiguration."
   },
-  "config_error": {
+  "more_puntuacio": {
+    "message": "Bewerte mich",
+    "description": "Titol que apareix en MORE en puntuació"
+
+  },
+  "more_donacio": {
+    "message": "Spenden.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
+
+  },
+
+  "error_saved_config_data": {
     "message": "Problem mit gespeicherter Konfiguration.\n",
     "description": "Mensaje de error cuando hay problemas con la configuración"
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_title": {
+    "message": "Es tut mir Leid......\uD83D\uDE1E",
+    "description": "Titol del error cuando su supera el limite en la base de datos de Chrome per item. EN LA NOTIFICACIÓ."
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_body": {
+    "message": "Die Chrome-Datenbank kann eine Sitzung mit so vielen Registerkarten nicht speichern. Versuchen Sie, einige davon zu schließen, und versuchen Sie es erneut.",
+    "description": "Mensaje de error cuando su supera el limite en la base de datos de Chrome per item.  EN LA NOTIFICACIÓ."
+  },
+  "error_en_execucio_notification": {
+    "message": "Etwas ist schief gelaufen.",
+    "description": "Mensaje de error generico cuando algo falla mientras se guarda la session o en ejecucion"
+  },
+  "button_logic_onlysave_notificationn_TITLE": {
+    "message": "Gerettet!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "button_logic_onlysave_notificationn_MESSAGE": {
+    "message": "In der Lesezeichenleiste gespeicherte Registerkarten.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
   }
 }
