--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -16,7 +16,7 @@
     "description": "Paraula del menu lateral"
   },
   "menu_donaciones": {
-    "message": "Paypal",
+    "message": "More",
     "description": "Paraula del menu lateral"
   },
   "atajos_titol": {
@@ -43,7 +43,7 @@
     "message": "Shortcuts"
   },
   "atajos_subentrada2_3": {
-    "message": "Paypal"
+    "message": "More"
   },
   "config_titol": {
     "message": "Working mode",
@@ -74,8 +74,36 @@
   "config_snackbar_message": {
     "message": "Updated configuration."
   },
-  "config_error": {
+  "more_puntuacio": {
+    "message": "Rate me!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "more_donacio": {
+    "message": "Donate.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
+  },
+  "error_saved_config_data": {
     "message": "Problem with saved settings.",
     "description": "Mensaje de error cuando hay problemas con la configuración"
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_title": {
+    "message": "I'm sorry...\uD83D\uDE1E",
+    "description": "Titol del error cuando su supera el limite en la base de datos de Chrome per item. EN LA NOTIFICACIÓ."
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_body": {
+    "message": "The Chrome database can't save a session with so many tabs. Try closing some of them and try again.",
+    "description": "Mensaje de error cuando su supera el limite en la base de datos de Chrome per item.  EN LA NOTIFICACIÓ."
+  },
+  "error_en_execucio_notification": {
+    "message": "Something went wrong.",
+    "description": "Mensaje de error generico cuando algo falla mientras se guarda la session o en ejecucion"
+  },
+  "button_logic_onlysave_notificationn_TITLE": {
+    "message": "Saved!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "button_logic_onlysave_notificationn_MESSAGE": {
+    "message": "Tabs saved in the bookmark bar.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
   }
 }
