--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -16,7 +16,7 @@
     "description": "Paraula del menu lateral"
   },
   "menu_donaciones": {
-    "message": "Paypal",
+    "message": "Más",
     "description": "Paraula del menu lateral"
   },
 
@@ -44,7 +44,7 @@
     "message": "Atajos"
   },
   "atajos_subentrada2_3": {
-    "message": "Paypal"
+    "message": "Más"
   },
 
 
@@ -78,9 +78,37 @@
     "message": "Configuración actualizada."
   },
 
+  "more_puntuacio": {
+    "message": "Califícame!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "more_donacio": {
+    "message": "Donación.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
+  },
 
-  "config_error": {
+  "error_saved_config_data": {
     "message": "Problema con la configuración guardada.",
     "description": "Mensaje de error cuando hay problemas con la configuración"
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_title": {
+    "message": "Lo siento....\uD83D\uDE1E",
+    "description": "Titol del error cuando su supera el limite en la base de datos de Chrome per item. EN LA NOTIFICACIÓ."
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_body": {
+    "message": "La base de datos de Chrome no puede guardar una sesión con tantas pestañas. Intente cerrar algunas y vuelva a intentarlo.",
+    "description": "Mensaje de error cuando su supera el limite en la base de datos de Chrome per item.  EN LA NOTIFICACIÓ."
+  },
+  "error_en_execucio_notification": {
+    "message": "Algo salió mal.",
+    "description": "Mensaje de error generico cuando algo falla mientras se guarda la session o en ejecucion"
+  },
+  "button_logic_onlysave_notificationn_TITLE": {
+    "message": "Guardado!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "button_logic_onlysave_notificationn_MESSAGE": {
+    "message": "Pestañas guardadas en la barra de marcadores.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
   }
 }
