--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -16,7 +16,7 @@
     "description": "Paraula del menu lateral"
   },
   "menu_donaciones": {
-    "message": "PayPal",
+    "message": "Meer",
     "description": "Paraula del menu lateral"
   },
   "atajos_titol": {
@@ -43,7 +43,7 @@
     "message": "Snelkoppelingen\n"
   },
   "atajos_subentrada2_3": {
-    "message": "PayPal"
+    "message": "Meer"
   },
   "config_titol": {
     "message": "Werk modus",
@@ -74,8 +74,36 @@
   "config_snackbar_message": {
     "message": "Bijgewerkte configuratie."
   },
-  "config_error": {
+  "more_puntuacio": {
+    "message": "Geef me een cijfer!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "more_donacio": {
+    "message": "Bijdrage.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
+  },
+  "error_saved_config_data": {
     "message": "Probleem met opgeslagen instellingen.",
     "description": "Mensaje de error cuando hay problemas con la configuración"
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_title": {
+    "message": "Het spijt me...\uD83D\uDE1E",
+    "description": "Titol del error cuando su supera el limite en la base de datos de Chrome per item. EN LA NOTIFICACIÓ."
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_body": {
+    "message": "De Chrome-database kan een sessie met zoveel tabbladen niet opslaan. Sluit een aantal ervan en probeer het opnieuw.",
+    "description": "Mensaje de error cuando su supera el limite en la base de datos de Chrome per item.  EN LA NOTIFICACIÓ."
+  },
+  "error_en_execucio_notification": {
+    "message": "Er is iets fout gegaan.",
+    "description": "Mensaje de error generico cuando algo falla mientras se guarda la session o en ejecucion"
+  },
+  "button_logic_onlysave_notificationn_TITLE": {
+    "message": "Opgeslagen!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "button_logic_onlysave_notificationn_MESSAGE": {
+    "message": "Tabbladen opgeslagen în de bladwijzerbalk.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
   }
 }
