--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -16,7 +16,7 @@
     "description": "Paraula del menu lateral"
   },
   "menu_donaciones": {
-    "message": "Paypal",
+    "message": "Więcej",
     "description": "Paraula del menu lateral"
   },
   "atajos_titol": {
@@ -43,7 +43,7 @@
     "message": "Skróty"
   },
   "atajos_subentrada2_3": {
-    "message": "Paypal"
+    "message": "Więcej"
   },
   "config_titol": {
     "message": "Tryb pracy",
@@ -74,8 +74,37 @@
   "config_snackbar_message": {
     "message": "Zaktualizowana konfiguracja"
   },
-  "config_error": {
+
+  "more_puntuacio": {
+    "message": "Oceń mnie!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "more_donacio": {
+    "message": "Darowizna.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
+  },
+  "error_saved_config_data": {
     "message": "Problem z zapisaną konfiguracją",
     "description": "Mensaje de error cuando hay problemas con la configuración"
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_title": {
+    "message": "Przepraszam...\uD83D\uDE1E",
+    "description": "Titol del error cuando su supera el limite en la base de datos de Chrome per item. EN LA NOTIFICACIÓ."
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_body": {
+    "message": "Baza danych Chrome nie może zapisać sesji z tak wieloma kartami. Spróbuj zamknąć niektóre z nich i spróbuj ponownie.",
+    "description": "Mensaje de error cuando su supera el limite en la base de datos de Chrome per item.  EN LA NOTIFICACIÓ."
+  },
+  "error_en_execucio_notification": {
+    "message": "Coś poszło nie tak.",
+    "description": "Mensaje de error generico cuando algo falla mientras se guarda la session o en ejecucion"
+  },
+  "button_logic_onlysave_notificationn_TITLE": {
+    "message": "Zapisany!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "button_logic_onlysave_notificationn_MESSAGE": {
+    "message": "Karty zapisane na pasku zakładek.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
   }
 }
