--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -74,8 +74,38 @@
   "config_snackbar_message": {
     "message": "Обновленная конфигурация."
   },
-  "config_error": {
+
+  "more_puntuacio": {
+    "message": "Оцени меня!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "more_donacio": {
+    "message": "Пожертвование.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
+  },
+
+  "error_saved_config_data": {
     "message": "Проблема с сохраненными настройками.",
     "description": "Mensaje de error cuando hay problemas con la configuración"
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_title": {
+    "message": "Мне жаль...\uD83D\uDE1E",
+    "description": "Titol del error cuando su supera el limite en la base de datos de Chrome per item. EN LA NOTIFICACIÓ."
+  },
+  "error_QUOTA_BYTES_PER_ITEM_notification_body": {
+    "message": "База данных Chrome не может сохранить сеанс с таким количеством вкладок. Попробуйте закрыть некоторые из них и повторите попытку.",
+    "description": "Mensaje de error cuando su supera el limite en la base de datos de Chrome per item.  EN LA NOTIFICACIÓ."
+  },
+  "error_en_execucio_notification": {
+    "message": "Что-то пошло не так.",
+    "description": "Mensaje de error generico cuando algo falla mientras se guarda la session o en ejecucion"
+  },
+  "button_logic_onlysave_notificationn_TITLE": {
+    "message": "Сохранено!",
+    "description": "Titol que apareix en MORE en puntuació"
+  },
+  "button_logic_onlysave_notificationn_MESSAGE": {
+    "message": "PВкладки, сохраненные на панели закладок.",
+    "description": "Titol que apareix en MORE en donacio /paypal"
   }
 }
